tests/toy/pos/000140_cdrc2.toylang
program a = { while 0 do { }; } .
