tests/toy/neg/001417_mutation.toylang
program a = { var a : do bool; } .
